# kubevirt

./: BUILD.bazel  Makefile
api/openapi-spec/: swagger.json
cluster-up/cluster/kind/: common.sh
cluster-up/cluster/kind-1.27-vdpa/: config_sriov_cluster.sh
cluster-up/cluster/kind-1.27-vdpa/sriov-components/manifests/: sriov-cni-daemonset.yaml  sriovdp-config.yaml.in  sriovdp-daemonset.yaml
cluster-up/cluster/kind-1.27-vdpa/sriov-node/: configure_vfs.sh  node.sh
cmd/sidecars/network-vdpa-binding/: BUILD.bazel  README.md  main.go
cmd/sidecars/network-vdpa-binding/callback/: BUILD.bazel  callback_test.go
cmd/sidecars/network-vdpa-binding/domain/: BUILD.bazel  configurator.go  configurator_test.go  regexp_test.go
cmd/sidecars/network-vdpa-binding/server/: BUILD.bazel  server.go
hack/: bazel-push-images.sh
pkg/hooks/: hooks.go  manager.go
pkg/hooks/v1alpha1/: api_v1alpha1.pb.go  api_v1alpha1.proto
pkg/hooks/v1alpha2/: api_v1alpha2.pb.go  api_v1alpha2.proto
pkg/network/deviceinfo/: BUILD.bazel  deviceinfo_test.go  sriov.go
pkg/network/downwardapi/: networkinfo.go  networkinfo_test.go
pkg/network/netbinding/: netbinding_test.go
pkg/network/vmispec/: interface_test.go
pkg/util/: util.go
pkg/virt-controller/network/: BUILD.bazel  pod_annotations.go  pod_annotations_test.go
pkg/virt-controller/services/: BUILD.bazel  template.go
pkg/virt-controller/watch/: BUILD.bazel  vmi.go  vmi_test.go
pkg/virt-handler/isolation/: detector.go
pkg/virt-launcher/virtwrap/: manager.go
staging/src/kubevirt.io/client-go/api/: openapi_generated.go
(+3 files in other folders)
